# alertmanager-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alertmanager_mcp/: __init__.py  __main__.py  client.py  config.py  healthcheck.py  models.py  runtime.py
