[project]
name = "alertmanager-mcp"
version = "0.1.0"
description = "MCP server for Prometheus Alertmanager"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "prometheus-client>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore=["D202", "D203", "D212", "D413", "E501", "ANN401", "PLR0913"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
