[project]
name = "alertmanager-mcp"
version = "0.1.0"
description = "MCP server for Prometheus Alertmanager"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "D202", "D203", "D212", "D413", "E501", "PLR0913"]

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.mypy]
python_version = "3.14"
strict = true
